# insinoorilaskin

./: .gitignore  README.md  pyproject.toml
insinoorilaskin/: __init__.py
src/insinoorilaskin/: config.py  friction_factor.py  lib.py  logger.py  logger_config.toml  main.py  pump_sizing.py
tests/: test_default.py
